--- a/pythonbasics01.ipynb
+++ b/pythonbasics01.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPXw3UK2icngLyQji+oE64r",
+      "authorship_tag": "ABX9TyNCAVEeBodo4QNEjqvUPubi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +64,7 @@
         "id": "9G0osx3aJOja",
         "outputId": "a10ca629-5521-492c-95dc-98b8a33404b4"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -86,7 +86,7 @@
       "metadata": {
         "id": "3cskwQuzkP9y"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -101,7 +101,7 @@
         "id": "Af3CMmsckiMa",
         "outputId": "ec0b93cd-d379-402d-b429-f2071d74700b"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -127,7 +127,7 @@
         "id": "9Bj06kNmkoKz",
         "outputId": "7d167d54-757d-401a-a055-56d8dc8ba115"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -150,7 +150,7 @@
         "id": "kIiISN0qkqdY",
         "outputId": "0cb0aab8-cf7e-4ee7-a57c-1bc293d9b74f"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -176,7 +176,7 @@
         "id": "ovJ5sUnDlf5G",
         "outputId": "adbd6e55-d805-4492-f701-580fbb6cd737"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,7 +199,7 @@
         "id": "lc3gG4kRl8n1",
         "outputId": "685bbd5b-305b-4c7a-b31a-19ec287a51b0"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -224,7 +224,7 @@
         "id": "dibr-lFNnFtY",
         "outputId": "53a5f0bf-2071-4b8a-9db4-71109e845377"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -245,7 +245,7 @@
       "metadata": {
         "id": "JjE2QCRJneYx"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -264,7 +264,7 @@
         "id": "87L-w8r2nlJE",
         "outputId": "4838609c-6520-4e82-b55c-0cac3b03f253"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -289,7 +289,7 @@
       "metadata": {
         "id": "jnoUrj-0p2WC"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -304,7 +304,7 @@
         "id": "vkU1xfvQp9HB",
         "outputId": "0b7d6315-dbe2-44f8-ea8d-82990fa86d2c"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -329,7 +329,7 @@
         "id": "sRP0DVOYsEMr",
         "outputId": "513b2df0-9ecb-47f2-cb11-82d54acdd61e"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -363,7 +363,7 @@
         "id": "xXMwXXtVwQ8o",
         "outputId": "a6756715-4eca-4d50-8556-2639753a521c"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -395,7 +395,7 @@
         "id": "me73dsxU7A9C",
         "outputId": "7fe1e5f1-4132-4e7e-f7c7-182d23abe7de"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -432,7 +432,7 @@
         "id": "zCvS0ONG4M8B",
         "outputId": "bf9cb739-9f65-4856-b1d0-4d8f3c6414a2"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -469,7 +469,7 @@
         "id": "0_MccluhKMgz",
         "outputId": "128232f5-23d6-40ce-8177-cd89827969e2"
       },
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -496,7 +496,7 @@
         "id": "kghCrfGoOScx",
         "outputId": "313532ea-1656-42bd-e97e-bffb8e7243fa"
       },
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -536,7 +536,7 @@
         "id": "Uo2fuDnTZcJt",
         "outputId": "a285d094-6870-40e2-eafd-0d01a3eac083"
       },
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -564,7 +564,7 @@
         "id": "hfcrXeUyb-7o",
         "outputId": "98f02620-7325-416a-f3b6-d991166ae96e"
       },
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -590,7 +590,7 @@
         "id": "jvas9jNUcWh-",
         "outputId": "6617ade9-95c1-4068-80d1-0e296ce4d1fd"
       },
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -612,7 +612,7 @@
       "metadata": {
         "id": "qt70enFNckx7"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -630,7 +630,7 @@
         "id": "29AmHEt5_kR7",
         "outputId": "03e4b3b5-5433-4349-8535-38a95112c06e"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -663,7 +663,7 @@
         "id": "xMcKLrA3_3tc",
         "outputId": "d2bc65c8-1905-414e-9ed4-697f74877bf7"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -686,7 +686,7 @@
         "id": "F8JcjgfnANDV",
         "outputId": "1d2c01ed-ff33-4f5f-d807-06555878dbbd"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -712,7 +712,7 @@
         "id": "j9iXkMDwAWR3",
         "outputId": "d3726654-dcd0-4796-89c5-f7a09a76fe5d"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -735,7 +735,7 @@
         "id": "lQAyUGClAcUR",
         "outputId": "003a0692-b043-435a-e26c-6294a29133a7"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -760,7 +760,7 @@
         "id": "3ne8AjEYAnkI",
         "outputId": "cd193f79-b0b8-4686-fe2e-73b80f378101"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -784,7 +784,7 @@
         "id": "f0wQXD9pBQ4s",
         "outputId": "bc4d8b52-69ac-48ce-c768-dd132879ab70"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -810,7 +810,7 @@
         "id": "4uyRYcFvBWZN",
         "outputId": "ec15c6a3-6b8a-4933-cef9-3f784875d34d"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -836,7 +836,7 @@
         "id": "HZ_ZIbGNBflv",
         "outputId": "b90f6a35-cd5a-4828-ec53-bc33b22015b9"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -859,7 +859,7 @@
         "id": "c79OQwxPBnTA",
         "outputId": "cc12d306-47bc-4cab-a291-745d66ad4285"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -882,7 +882,7 @@
         "id": "p6temG0iBuEH",
         "outputId": "d4e1747a-c788-463c-a16c-738733101268"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -905,7 +905,7 @@
         "id": "4ypM6uRdCD_g",
         "outputId": "0297596d-f573-4d25-8967-86cb4184f5e9"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -919,13 +919,432 @@
     {
       "cell_type": "code",
       "source": [
-        "math.modf"
+        "math.modf(100.23)"
       ],
       "metadata": {
-        "id": "Oai_tH8fCNpG"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Oai_tH8fCNpG",
+        "outputId": "2a032d34-c0c4-4dfe-f1b5-773b4aca144b"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(0.23000000000000398, 100.0)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(math.modf(2))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pHZcfeUTFBo-",
+        "outputId": "c43d41da-5eaa-4834-835e-5d3ff3f41851"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(0.0, 2.0)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(math.modf(-55.57))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DIBO6_M2FFpO",
+        "outputId": "7a5426c0-8c58-4875-982d-bd4b837b1558"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(-0.5700000000000003, -55.0)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num=int(input(\"Enter your number: \"))\n",
+        "flag=False\n",
+        "if(num==1):\n",
+        "  print(\"{a} is not prime number\".format(a=num))\n",
+        "  flag=True\n",
+        "elif(num>1):\n",
+        "  for i in range(2,num):\n",
+        "    if(num%i==0):\n",
+        "     flag=True\n",
+        "    break\n",
+        "\n",
+        "if flag:\n",
+        "  print(\"{a} is not a prime number\".format(a=num))\n",
+        "else:\n",
+        "  print(\"{a1} is a prime number\".format(a1=num))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "79TJjzLOHORH",
+        "outputId": "b0ae6ea7-ef6e-4e4a-d446-a4139f43ca81"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter your number: 5\n",
+            "5 is a prime number\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "5//2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Pm3mevhUW74o",
+        "outputId": "9afcd47e-355a-470a-e89e-025751c555d3"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 67
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##check prime number or  not"
+      ],
+      "metadata": {
+        "id": "iAseIqZAaY33"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num=int(input(\"Enter your number: \"))\n",
+        "if(num==1):\n",
+        "  print(num,\" is not a prime number\")\n",
+        "elif(num>1):\n",
+        "  for i in range(2,num):\n",
+        "    if(num%i==0):\n",
+        "      print(num,\" is not a prime number\")\n",
+        "      print(\"since \",i ,\"times \",num//i,\" is \",num )\n",
+        "      break\n",
+        "  else:\n",
+        "    print(num,\" is a prime number\")\n",
+        "\n",
+        "else:\n",
+        "  print(num,\" is not a prime number\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9YaS3QPaahXM",
+        "outputId": "1b3e0d78-2941-45d3-84da-448bbf880723"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter your number: 24\n",
+            "24  is not a prime number\n",
+            "since  2 times  12  is  24\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##find max of 3 numbers"
+      ],
+      "metadata": {
+        "id": "YwixxWNAeT6u"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n1=float(input(\"Enter first num: \"))\n",
+        "n2=float(input(\"Enter second num: \"))\n",
+        "n3=float(input(\"Enter third num: \"))\n",
+        "\n",
+        "if (n1>=n2) and (n1>=n3):\n",
+        "  print(n1,\" is the largest number\")\n",
+        "elif (n2>=n1) and (n2>=n3):\n",
+        "  print(n2, \"is the largest number\")\n",
+        "else:\n",
+        "  print(n3, \"is the largest number\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UbQwVCiteX81",
+        "outputId": "b26a8789-20cb-4bb5-8339-1c04ca98108e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter first num: 5\n",
+            "Enter second num: 6\n",
+            "Enter third num: 6\n",
+            "6.0 is the largest number\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n1=float(input(\"Enter first num: \"))\n",
+        "n2=float(input(\"Enter second num: \"))\n",
+        "n3=float(input(\"Enter third num: \"))\n",
+        "\n",
+        "print(\"the largest number is: \",max(n1,n2,n3))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YUj_RMx3aehr",
+        "outputId": "660a79dc-b001-4880-d946-d65b09c412cb"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter first num: 4\n",
+            "Enter second num: 4\n",
+            "Enter third num: 4\n",
+            "the largest number is:  4.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=5\n",
+        "for i in range(1,a+1):\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "-zOjiMaJjUJO",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d8a117a1-bd52-49aa-f701-b8a606407ed7"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##find factorial of a number"
+      ],
+      "metadata": {
+        "id": "be7ENJbnxj9s"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num=int(input(\"Enter your number: \"))\n",
+        "factorial=1\n",
+        "if(num<0):\n",
+        "  print(num,\" does not have factorial\")\n",
+        "elif(num==1):\n",
+        "  print(\"factorial of \",num,\" is \",1)\n",
+        "elif(num>1):\n",
+        "  for i in range(1,num+1):\n",
+        "      factorial=factorial*i\n",
+        "  print(\"factorial of \",num,\" is \",factorial)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VvUY6ftNwvDU",
+        "outputId": "c61daa73-e88b-4dff-cda6-86f33d141867"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter your number: -1\n",
+            "-1  does not have factorial\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##find factorial of a number using recursion"
+      ],
+      "metadata": {
+        "id": "x4-Wo-nkzgMm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def factorial(x):\n",
+        "    if(x==1):\n",
+        "      return 1\n",
+        "    elif(x<1):\n",
+        "      return 'not possible'\n",
+        "    else:\n",
+        "      return(x*factorial(x-1))\n",
+        "\n",
+        "num=int(input(\"Enter a number: \"))\n",
+        "result=factorial(num)\n",
+        "print(\"factorial of \",num,\" is \",result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0iDAWPotzjzS",
+        "outputId": "270bd129-d876-46df-9550-8f99deca11a7"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number: 9\n",
+            "factorial of  9  is  362880\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##display all prime numbers within an interval"
+      ],
+      "metadata": {
+        "id": "TA1pEt3z1uBj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num1=int(input(\"Enter lower limit: \"))\n",
+        "num2=int(input(\"Enter upper limit: \"))\n",
+        "\n",
+        "print(\"the prime numbers between \",num1,\" and \",num2,\" are: \")\n",
+        "for num in range(num1,num2+1):\n",
+        "  if(num>1):\n",
+        "    for i in range(2,num):\n",
+        "      if(num%i==0):\n",
+        "        break\n",
+        "    else:\n",
+        "      print(num)\n",
+        "         "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CcFJrLWv15ME",
+        "outputId": "67bb4786-24d2-4084-dc50-03651ec5db9d"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter lower limit: 900\n",
+            "Enter upper limit: 1000\n",
+            "the prime numbers between  900  and  1000  are: \n",
+            "907\n",
+            "911\n",
+            "919\n",
+            "929\n",
+            "937\n",
+            "941\n",
+            "947\n",
+            "953\n",
+            "967\n",
+            "971\n",
+            "977\n",
+            "983\n",
+            "991\n",
+            "997\n"
+          ]
+        }
+      ]
     }
   ]
 }
